--- a/style.css
+++ b/style.css
@@ -75,26 +75,110 @@ body {
 
 .card {
     background-color: #1f2535;
-    width: 300px;
+    width: 500px;
+    height: 200px;
     border-radius: 1rem;
     border-style: solid;
     border: white;
     border-width: 5px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
+.icon {
+    display: flex;
+    margin: 1rem;
+}
+
+.icon-description {
+    margin-left: 1rem;
+}
+
+p {
+    font-weight: 100;
+    color: grey;
+}
+
+.inputs {
+    margin-top: 3rem;
+}
+
+.inputs button {
+    padding: .2rem;
+}
 #remove {
     background-color: #1f2535;
     border-radius: 1rem;
-    border-color: blue;
     border: solid;
     border-width: thin;
 }
 .card .inputs {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 22rem;
+    border-color: gray;
+}
 
+/* toggle switch */
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 35px;
+  height: 22px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 15px;
+  width: 15px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #ef5e55;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #ef5e55;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(12px);
+  -ms-transform: translateX(12px);
+  transform: translateX(12px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
 
 
