--- a/style.css
+++ b/style.css
@@ -51,7 +51,11 @@ body {
 .extension-bar {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
+}
+
+.extension-bar h1{
+    font-size: 42px;
 }
 
 .filters {
@@ -81,8 +85,8 @@ body {
 
 .card {
     background-color: #1f2535;
-    width: 400px;
-    height: 200px;
+    width: 500px;
+    height: 300px;
     border-radius: 1rem;
     border-style: solid;
     border: solid;
@@ -109,7 +113,7 @@ p {
 }
 
 .inputs {
-    margin-top: 2rem;
+    margin-top: 7rem;
 }
 
 .inputs button {
@@ -202,6 +206,15 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+.grid {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns:repeat(3, minmax(500px, 1fr));
+    gap: 1rem;
+    margin-bottom: 5rem;
 }
 
 
