--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
 }
 
 .filters button {
-    padding: 8px 15px;
+    padding: 8px 25px;
     border: none;
     border-radius: 1.8rem;
     background-color: #202636;
@@ -85,20 +85,31 @@ body {
 
 .card {
     background-color: #1f2535;
-    width: 500px;
-    height: 300px;
+    width: 100%; /* Changed from fixed 500px */
+    height: 230px;
     border-radius: 1rem;
-    border-style: solid;
-    border: solid;
-    border-width: thin;
-    border-color: grey;
+    border: 1px solid grey; /* Simplified border */
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
+}
+
+.card .icon img{
+    width: 80px;
+    height:80px;
+}
+
+.card .inputs {
+    display: flex;
+    justify-content: space-between; /* Better than fixed gap */
+    align-items: center;
+    padding: 0 1rem 1rem 1rem;
+    margin-top: auto; /* Pushes to bottom */
 }
 
 .card-details {
     display: flex;
-    margin: 1rem;
+    margin: 2rem;
 }
 
 .icon-description {
@@ -113,27 +124,29 @@ p {
 }
 
 .inputs {
-    margin-top: 7rem;
+    margin-top: 5.5rem;
 }
 
 .inputs button {
     padding: .2rem;
 }
 
-#remove {
+.remove {  
     background-color: #202636;
     border-radius: 1rem;
     border: solid;
     border-width: thin;
     border-color: grey;
+    padding: 8px 16px; 
+    width: 80px;  
 }
 
-#remove:hover {
+.remove:hover {
     transition: 200ms;
     background-color: #535868;
 }
 
-#remove:active {
+.remove:active {
     transition: 200ms;
     background-color: #f35c54;
     color: #040918;
@@ -209,12 +222,13 @@ input:checked + .slider:before {
 }
 
 .grid {
-    width: 100%;
-    height: 100%;
     display: grid;
-    grid-template-columns:repeat(3, minmax(500px, 1fr));
-    gap: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); /* More responsive */
+    gap: 1.5rem;
+    width: 100%;
     margin-bottom: 5rem;
+    padding: 0 1rem; /* Add some breathing room */
+    box-sizing: border-box;
 }
 
 
